# Tomate-Mozza

./: .env.template  LICENSE  README.md  devlog.md  pyproject.toml  requirements.txt
disco/: client.py  multiple_clients.py  single_client.py  utils.py  worker.py
maps/: ez_ordered_blocks.json  ordered_blocks.json  ordered_blocks.txt
maps/2_turns/: ordered_blocks.json
models/: 1st_run_13_03.pth  2nd_run_14_03.pth
models/03-19_08-16/: model.pth
models/03-21_10-41/: Easy_pizzy.json  model.pth
models/03-21_17-51/: model.pth  stats.json
models/03-22_15-11/: model.pth  stats.json
models/03-22_15-13/: model.pth  stats.json
models/03-22_15-15/: model.pth  stats.json
models/03-22_15-20/: model.pth  stats.json
models/03-22_15-23/: model.pth  stats.json
models/03-27_16-05/: model.pth
models/03-29_10-43/: model.pth  stats.json
models/04-01_11-43/: model.pth
models/04-01_21-05/: model.pth  stats.json
models/04-03_08-22/: model.pth
models/04-07_09-39/: model.pth  stats.json
models/04-07_12-48/: model.pth  stats.json
models/04-07_15-59/: model.pth
models/04-10_21-10/: actor.pth  critic.pth  stats.json
models/04-11_16-18/: actor.pth  critic.pth  stats.json
models/04-14_13-41/: actor.pth
models/goat/: 05.05.00.Replay.gbx  05.05.70.Replay.gbx  05.07.00.Replay.gbx  05.07.80.Replay.gbx  05.08.90.Replay.gbx  05.11.80.Replay.gbx  05.12.50.Replay.gbx  05.12.70.Replay.gbx  05.14.00.Replay.gbx  05.14.30.Replay.gbx  (+82 more)
src/: client.py  config.py  main.py  map_layout.py  model.py  order_map_blocks.py  plot.py  tm_launcher.py  utils.py  worker.py
(+58 files in other folders)
