[project]
name = "tomate-mozza"
version = "0.1.0"
description = ""
authors = [
    {name = "JauffretOscar",email = "oscar.jauffret@ulb.be"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bytefield (==1.0.2)",
    "comtypes (==1.4.10)",
    "contourpy (==1.3.1)",
    "cycler (==0.12.1)",
    "filelock (==3.17.0)",
    "fonttools (==4.56.0)",
    "fsspec (==2025.3.0)",
    "jinja2 (==3.1.6)",
    "keyboard (==0.13.5)",
    "kiwisolver (==1.4.8)",
    "markupsafe (==3.0.2)",
    "matplotlib (==3.10.1)",
    "mouseinfo (==0.1.3)",
    "mpmath (==1.3.0)",
    "networkx (==3.4.2)",
    "numpy (==2.2.3)",
    "packaging (==24.2)",
    "pillow (==11.1.0)",
    "psutil (==7.0.0)",
    "pygetwindow (==0.0.9)",
    "pymonctl (==0.92)",
    "pymsgbox (==1.0.9)",
    "pyparsing (==3.2.1)",
    "pyperclip (==1.9.0)",
    "pyrect (==0.2.0)",
    "pyscreeze (==1.0.1)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.0.1)",
    "pytweening (==1.2.0)",
    "pywin32 (==308)",
    "pywinauto (==0.6.9)",
    "pywinbox (==0.7)",
    "pywinctl (==0.4.1)",
    "readwritememory (==0.1.5)",
    "setuptools (==76.0.0)",
    "six (==1.17.0)",
    "sympy (==1.13.1)",
    "tminterface (==1.0.2)",
    "torch (==2.6.0)",
    "typing-extensions (==4.12.2)",
    "watchdog (>=6.0.0,<6.1.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
